--- a/ProductApp/src/app/products/product.component.html
+++ b/ProductApp/src/app/products/product.component.html
@@ -17,6 +17,7 @@
             </div>
         </div>
         {{showImage}}
+        {{errorMessage}}
         <div class="table-responsive" *ngIf="showTable">
             <table class="table">
                 <thead>
